# docs/swagger.json
@@ -147,9 +147,9 @@
                 }
             }
         },
-        "/product/{query}": {
+        "/products": {
             "get": {
-                "description": "Search products by query",
+                "description": "Search products by query (optional)",
                 "consumes": [
                     "application/json"
                 ],
@@ -165,8 +165,7 @@
                         "type": "string",
                         "description": "query string for searching products",
                         "name": "query",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
